# SimulacraEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  VulkanLayersOutput.txt  compile_commands.json  main.cpp  output.txt
Source/: CMakeLists.txt  EngineDefines.h  EngineTypes.h  ray.h  sse_mathfun.h  types.h
Source/Algo/: SimulacraConsoleManager.cpp  SimulacraIConsoleSystem.h
Source/Application/: SimulacraApplication.cpp  SimulacraApplication.h  SimulacraWindow.cpp  SimulacraWindow.h
Source/Application/Windows/: SimulacraWindowsApplication.cpp  SimulacraWindowsApplication.h  SimulacraWindowsWindow.cpp  SimulacraWindowsWindow.h
Source/Async/: SimulacraJob.cpp  SimulacraJob.h  SimulacraJobQueue.h  SimulacraMutex.h
Source/Core/: CMakeLists.txt  Core.h  CoreDefines.h  CoreTypes.h  Globals.h  SimulacraConsoleCommand.h  SimulacraConsoleManager.h  SimulacraConsoleVariable.h  SimulacraGameViewport.cpp  SimulacraGameViewport.h  SimulacraIConsoleSystem.h
Source/Core/ASM/: context.asm
Source/Core/Application/: CMakeLists.txt  SimulacraApplication.cpp  SimulacraApplication.h  SimulacraWindow.cpp  SimulacraWindow.h  Window.cpp  Window.h
Source/Core/Application/Mac/: CocoaWindow.h  CocoaWindow.mm  MacApplicationDelegate.h  MacApplicationDelegate.mm  MacWindow.h  MacWindow.mm
Source/Core/Application/Windows/: SimulacraWindowsApplication.cpp  SimulacraWindowsApplication.h  SimulacraWindowsWindow.cpp  SimulacraWindowsWindow.h  WindowsWindow.cpp  WindowsWindow.h
Source/Core/Container/: ArrayView.h
Source/Core/Containers/: Array.h  ArrayList.h  CMakeLists.txt  LinkedList.h  List.h  SimulacraArray.h  SimulacraContainerAllocators.h  SimulacraList.h  SimulacraMap.h  SimulacraRingBuffer.h
Source/Core/Importers/: OBJImporter.h
Source/Core/Jobs/: JobQueue.h  Scheduler.h
Source/Core/Launch/: WinMain.cpp  Win_Main.cpp
Source/Core/Launcher/: Win_Main.cpp
Source/Core/Logging/: SimulacraInternalLogging.cpp  SimulacraInternalLogging.h  SimulacraLogSeverity.h  SimulacraLogging.cpp  SimulacraLogging.h  SimulacraLoggingSeverity.h
Source/Core/Main/Mac/: MacMain.mm
Source/Core/Main/Windows/: WindowsMain.cpp
Source/Core/Math/: CMakeLists.txt  Color.h  Math.h  Matrix.h  SimulacraMathSSE.h  SimulacraMathUtils.h  SimulacraMatrix.h  SimulacraMatrix.inl  SimulacraVector.h  SimulacraVector.inl  Vector.h  Vector.inl  Vector2.h  Vector4.h
Source/Core/Memory/: AllocatorTests.cpp  AllocatorTests.h
Source/Core/Memory/Private/: DoubleEndedStackAllocator.cpp  LinearAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
Source/Core/Memory/Public/: Alignment.h  AlignmentUtils.h  Allocator.h  DoubleEndedStackAllocator.h  LinearAllocator.h  MemoryBlock.h  PoolAllocator.h  StackAllocator.h
Source/Core/Platform/: CMakeLists.txt  Platform.h  SimulacraWindows.h  SimulacraWindowsWindow.cpp  SimulacraWindowsWindow.h
Source/Core/Platform/Mac/: MacPlatformDefines.h  MacPlatformInclude.h  SimulacraMacPlatform.h
Source/Core/Platform/Windows/: SimulacraWindowsPlatform.h  WindowsPlatformDefines.h  WindowsPlatformInclude.h
Source/Core/String/: SimulacraString.h
Source/Core/Sys/: CMakeLists.txt  Precompiled.cpp  Precompiled.h  SimEngineAsserts.h  SimEngineDefines.h  SimEngineIncludes.h  SimEngineTypes.h  SimulacraEngineDefines.h  SimulacraEngineTypes.h
Source/Core/Task/: CMakeLists.txt  Scheduler.h  Task.h  TaskChain.h  TaskQueue.h  TasksTest.cpp
Source/Core/Templates/: CMakeLists.txt  SimualcraIsSame.h  SimualcraIsSimple.h  SimulacraIsPointer.h
Source/Core/Thread /: SimThread.cpp  SimThread.h
Source/Core/Threads/: SimulacraThread.cpp  SimulacraThread.h
Source/Engine/: Camera.cpp  Camera.h
Source/Math/: Matrix.cpp  Matrix.h  Matrix.inl  Vector.cpp  Vector.h  Vector.inl
Source/Misc/: SimulacraConsoleManager.h  SimulacraConsoleVariable.h  SimulacraDirectedAcyclic.cpp
Source/RHI/: CMakeLists.txt  SimulacraRHISystem.h
Source/RHI/Private/: SimulacraRHI.cpp
Source/RHI/Public/: SimulacraRHI.h
Source/RHI/Vulkan/: CMakeLists.txt
Source/RHI/Vulkan/Private/: SimulacraVulkanCommandBuffer.cpp  SimulacraVulkanCommands.cpp  SimulacraVulkanDebugUtils.cpp  SimulacraVulkanDevice.cpp  SimulacraVulkanExtensions.cpp  SimulacraVulkanInstance.cpp  SimulacraVulkanPipeline.cpp  SimulacraVulkanPlatform.cpp  SimulacraVulkanQueue.cpp  SimulacraVulkanRHI.cpp  SimulacraVulkanResource.cpp  SimulacraVulkanShader.cpp  SimulacraVulkanSwapchain.cpp  SimulacraVulkanViewport.cpp  SimulacraVulkanWindow.cpp
Source/RHI/Vulkan/Public/: SimulacraVulkan.h  SimulacraVulkanCommandBuffer.h  SimulacraVulkanCommands.h  SimulacraVulkanCommon.h  SimulacraVulkanDebugUtils.h  SimulacraVulkanDevice.h  SimulacraVulkanExtensions.h  SimulacraVulkanImage.h  SimulacraVulkanInstance.cpp  SimulacraVulkanInstance.h  SimulacraVulkanLayers.h  SimulacraVulkanPipeline.h  SimulacraVulkanPlatform.h  SimulacraVulkanQueue.h  SimulacraVulkanRHI.h  SimulacraVulkanResource.h  SimulacraVulkanShader.cpp  SimulacraVulkanShader.h  SimulacraVulkanShaderFactory.h  SimulacraVulkanSwapchain.h  SimulacraVulkanUtils.h  SimulacraVulkanViewport.h  SimulacraVulkanWindow.h
Source/Renderer/: CMakeLists.txt  ForwardRenderer.h  ForwardRenderer.mm  ForwardRendererTypes.h  RenderBackend.cpp  RenderBackend.h  Renderer.cpp  Renderer.h  RendererTypes.h  SimulacraRenderGraphBuilder.cpp
Source/Renderer/Backend/: CMakeLists.txt  HardwareInterface.cpp  HardwareInterface.h  Vertex.h
Source/Renderer/Backend/DirectX/: CMakeLists.txt
Source/Renderer/Backend/Metal/: MetalCppInclude.h  MetalInclude.h  MetalManager.h  MetalManager.mm  MetalMath.h  MetalPipeline.h  MetalPipeline.mm  MetalRHI.h  (+7 more)
Source/Renderer/Vulkan/: RenderBackend_VK.cpp  RenderBackend_VK.h  SVkDevices.cpp  SVkPhysicalDevice.cpp  SVkPhysicalDevice.h  SVkQueues.cpp  SVkQueues.h  SVkSwapChain.cpp  SVkSwapChain.h  SimEngineVulkan.cpp  SimEngineVulkan.h  SimEngineVulkanDebug.cpp  SimEngineVulkanDebug.h  Vk_Renderer.cpp  Vk_Renderer.h
Source/RendererBackend/Vulkan/: CMakeLists.txt
Source/Subsystems/Renderer/: SimulacraRenderGraphBuilder.h
Source/win32/: WindowProcedure.cpp  WindowsApplication.h
(+467 files in other folders)
